--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <p style='padding: 5px 0; text-decoration: none; color: #387853; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif;'>
 <img src="https://uploads-ssl.webflow.com/631f769e18a16a27d667182b/6578c9bc76ea11900abe9b4a_omniscience_logo.png" width="100" height="13" style="width: 100px; height:auto; padding-bottom: 10px;" /><br/>
 
-<span style='text-decoration: none; color: #387853; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif;'>First Last, Credentials</span>
+<span style='text-decoration: none; color: #387853; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif;'>First Last, Credentials</span><br/>
+
 <span style='text-decoration: none; color: #4BA06E; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif;'>Title<br/>
 +1 000 000 0000<br/><br/></span>
 ﻿
