--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <div style="padding 5px 0;">
 
-<p style='padding: 5px 0; text-decoration: none; color: #387853; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif;'>
-<img src="https://uploads-ssl.webflow.com/631f769e18a16a27d667182b/6578c9bc76ea11900abe9b4a_omniscience_logo.png" width="100" height="13" style="width: 100px; height:auto; padding-bottom: 10px;" /><br/>
+<p style='padding: 5px 0; text-decoration: none; color: #387853; font-size: 10px; line-height: 1.5; font-family: "SF Pro", Helvetica, Arial, san-serif;'>
+<img src="https://uploads-ssl.webflow.com/631f769e18a16a27d667182b/6578c9bc76ea11900abe9b4a_omniscience_logo.png" width="100" height="13" style="width: 100px; height:auto; padding-bottom: 10px; line-height: 1.5;" /><br/>
 
-<span style='text-decoration: none; color: #387853; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif;'>First Last, Credentials</span><br/>
+<span style='text-decoration: none; color: #387853; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif; line-height: 1.5;'>First Last, Credentials</span><br/>
 
-<span style='text-decoration: none; color: #4BA06E; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif;'>Title<br/>
+<span style='text-decoration: none; color: #4BA06E; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif; line-height: 1.5;'>Title<br/>
 +1 000 000 0000<br/><br/></span>
 ﻿
-<a href="https://maps.app.goo.gl/PgpJVADVVZ7d3YRa6" style='text-decoration: none; color: #668884; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif;'>Texas Medical Center Innovation</a><br/>
-<a href="https://maps.app.goo.gl/PgpJVADVVZ7d3YRa6" style='text-decoration: none; color: #668884; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif;'>omniscience.bion</a>
+<a href="https://maps.app.goo.gl/PgpJVADVVZ7d3YRa6" style='text-decoration: none; color: #668884; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif; line-height: 1.5;'>Texas Medical Center Innovation</a><br/>
+<a href="https://maps.app.goo.gl/PgpJVADVVZ7d3YRa6" style='text-decoration: none; color: #668884; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif; line-height: 1.5;'>omniscience.bion</a>
 
 </p>
 </div>
