--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
 <span style='text-decoration: none; color: #4BA06E; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif; line-height: 1.5;'>Title<br/>
 +1 000 000 0000<br/><br/></span>
-﻿
+
 <a href="https://maps.app.goo.gl/PgpJVADVVZ7d3YRa6" style='text-decoration: none; color: #668884; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif; line-height: 1.5;'>Texas Medical Center Innovation</a><br/>
-<a href="https://maps.app.goo.gl/PgpJVADVVZ7d3YRa6" style='text-decoration: none; color: #668884; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif; line-height: 1.5;'>omniscience.bion</a>
+<a href="https://maps.app.goo.gl/PgpJVADVVZ7d3YRa6" style='text-decoration: none; color: #668884; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif; line-height: 1.5;'>omniscience.bio</a>
 
 </p>
 </div>
