--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
-<div style="padding 5px 0;">
+<div class="mds-signature-wrap" style="padding 5px 0;">
 
-<p style='padding: 5px 0; text-decoration: none; color: #387853; font-size: 10px; line-height: 1.1; font-family: "SF Pro", Helvetica, Arial, san-serif; font: normal 10px/1.5 "SF Pro",Helvetica,Arial,san-serif'>
+<p class="mds-signature-p" style='padding: 5px 0; text-decoration: none; color: #387853; font-size: 10px; line-height: 1.1; font-family: "SF Pro", Helvetica, Arial, san-serif; font: normal 10px/1.5 "SF Pro",Helvetica,Arial,san-serif'>
 <img src="https://uploads-ssl.webflow.com/631f769e18a16a27d667182b/6578c9bc76ea11900abe9b4a_omniscience_logo.png" width="100" height="13" style="width: 100px; height:auto; padding-bottom: 5px; font: normal 10px/1.5 "SF Pro",Helvetica,Arial,san-serif" /><br/>
 
-<span style='text-decoration: none; color: #387853; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif; line-height: 1.1; font-weight: bold; font: bold 10px/1.5 "SF Pro",Helvetica,Arial,san-serif'>First Last</span><span style='text-decoration: none; color: #387853; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif; font: normal 10px/1.5 "SF Pro",Helvetica,Arial,san-serif'>, Credentials</span><br/>
+<meta name="color-scheme" content="light dark">
+<meta name="supported-color-schemes" content="light dark">
+<style>
+@media (prefers-color-scheme: dark) {
+	.mds-signature-wrap span, .mds-signature-wrap p, .mds-signature-wrap a, 
+	.mds-signature-p, .mds-signature-span, .mds-signature-a {
+		color: rgb(255, 255, 255) !important;
+		-webkit-text-fill-color: rgb(255, 255, 255) !important;
+	} 
+</style>
 
-<span style='text-decoration: none; color: #4BA06E; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif; font: normal 10px/1.5 "SF Pro",Helvetica,Arial,san-serif'>Job Title<br/>
+<span class="mds-signature-span" style='text-decoration: none; color: #387853; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif; line-height: 1.1; font-weight: bold; font: bold 10px/1.5 "SF Pro",Helvetica,Arial,san-serif'>First Last</span><span class="mds-signature-span" style='text-decoration: none; color: #387853; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif; font: normal 10px/1.5 "SF Pro",Helvetica,Arial,san-serif'>, Credentials</span><br/>
+
+<span class="mds-signature-span" style='text-decoration: none; color: #4BA06E; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif; font: normal 10px/1.5 "SF Pro",Helvetica,Arial,san-serif'>Job Title<br/>
 +1 000 000 0000<br/><br/></span>
 
-<a href="https://maps.app.goo.gl/PgpJVADVVZ7d3YRa6" style='text-decoration: none; color: #668884; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif; font: normal 10px/1.5 "SF Pro",Helvetica,Arial,san-serif'>Texas Medical Center Innovation</a><br/>
-<a href="https://maps.app.goo.gl/PgpJVADVVZ7d3YRa6" style='text-decoration: none; color: #668884; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif; font: normal 10px/1.5 "SF Pro",Helvetica,Arial,san-serif'>omniscience.bio</a>
+<a class="mds-signature-a" href="https://maps.app.goo.gl/PgpJVADVVZ7d3YRa6" style='text-decoration: none; color: #668884; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif; font: normal 10px/1.5 "SF Pro",Helvetica,Arial,san-serif'>Texas Medical Center Innovation</a><br/>
+<a class="mds-signature-a" href="https://maps.app.goo.gl/PgpJVADVVZ7d3YRa6" style='text-decoration: none; color: #668884; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif; font: normal 10px/1.5 "SF Pro",Helvetica,Arial,san-serif'>omniscience.bio</a>
 
 </p>
 </div>
