--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
+<html>
+<head>
+<meta name="color-scheme" content="light dark">
+<meta name="supported-color-schemes" content="light dark">
+<style>
+@media (prefers-color-scheme: dark) {
+	.mds-signature-wrap span, .mds-signature-wrap p, .mds-signature-wrap a, 
+	.mds-signature-p, .mds-signature-span, .mds-signature-a {
+		color: rgb(255, 255, 255) !important;
+		-webkit-text-fill-color: rgb(255, 255, 255) !important;
+	} 
+}
+</style>
+</head>
+<body>
 <div class="mds-signature-wrap" style="padding 5px 0;">
 
 <p class="mds-signature-p" style='padding: 5px 0; text-decoration: none; color: #387853; font-size: 10px; line-height: 1.1; font-family: "SF Pro", Helvetica, Arial, san-serif; font: normal 10px/1.5 "SF Pro",Helvetica,Arial,san-serif'>
@@ -25,3 +40,5 @@
 
 </p>
 </div>
+</body>
+</html>
