--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 	.mds-signature-p, .mds-signature-span, .mds-signature-a {
 		color: rgb(255, 255, 255) !important;
 		-webkit-text-fill-color: rgb(255, 255, 255) !important;
-	} 
+	}
+	.mds-signature-img {
+		content:url("https://huntersinclairtiv.github.io/mds/OmniScience-Logo-Email-dark");
+	}
 }
 </style>
 </head>
@@ -16,7 +19,7 @@
 <div class="mds-signature-wrap" style="padding 5px 0;">
 
 <p class="mds-signature-p" style='padding: 5px 0; text-decoration: none; color: #387853; font-size: 10px; line-height: 1.1; font-family: "SF Pro", Helvetica, Arial, san-serif; font: normal 10px/1.5 "SF Pro",Helvetica,Arial,san-serif'>
-<img src="https://uploads-ssl.webflow.com/631f769e18a16a27d667182b/6578c9bc76ea11900abe9b4a_omniscience_logo.png" width="100" height="13" style="width: 100px; height:auto; padding-bottom: 5px; font: normal 10px/1.5 "SF Pro",Helvetica,Arial,san-serif" /><br/>
+<a href="https://www.mercuryds.com/" style="text-decoration: none;"><img class="mds-signature-img" src="https://huntersinclairtiv.github.io/mds/OmniScience-Logo-Email-light" width="100" height="13" style="width: 100px; height:auto; padding-bottom: 5px; font: normal 10px/1.5 "SF Pro",Helvetica,Arial,san-serif" /></a><br/>
 
 <meta name="color-scheme" content="light dark">
 <meta name="supported-color-schemes" content="light dark">
@@ -27,6 +30,9 @@
 		color: rgb(255, 255, 255) !important;
 		-webkit-text-fill-color: rgb(255, 255, 255) !important;
 	} 
+	.mds-signature-img {
+		content:url("https://huntersinclairtiv.github.io/mds/OmniScience-Logo-Email-dark");
+	}
 }
 </style>
 
