--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		-webkit-text-fill-color: rgb(255, 255, 255) !important;
 	}
 	.mds-signature-img {
-		content:url("https://huntersinclairtiv.github.io/mds/OmniScience-Logo-Email-dark");
+		content:url("https://huntersinclairtiv.github.io/mds/OmniScience-Logo-Email-dark.png");
 	}
 }
 </style>
@@ -19,7 +19,7 @@
 <div class="mds-signature-wrap" style="padding 5px 0;">
 
 <p class="mds-signature-p" style='padding: 5px 0; text-decoration: none; color: #387853; font-size: 10px; line-height: 1.1; font-family: "SF Pro", Helvetica, Arial, san-serif; font: normal 10px/1.5 "SF Pro",Helvetica,Arial,san-serif'>
-<a href="https://www.mercuryds.com/" style="text-decoration: none;"><img class="mds-signature-img" src="https://huntersinclairtiv.github.io/mds/OmniScience-Logo-Email-light" width="100" height="13" style="width: 100px; height:auto; padding-bottom: 5px; font: normal 10px/1.5 "SF Pro",Helvetica,Arial,san-serif" /></a><br/>
+<a href="https://www.mercuryds.com/" style="text-decoration: none;"><img class="mds-signature-img" src="https://huntersinclairtiv.github.io/mds/OmniScience-Logo-Email-light.png" width="100" height="13" style="width: 100px; height:auto; padding-bottom: 5px; font: normal 10px/1.5 "SF Pro",Helvetica,Arial,san-serif" /></a><br/>
 
 <meta name="color-scheme" content="light dark">
 <meta name="supported-color-schemes" content="light dark">
@@ -31,7 +31,7 @@
 		-webkit-text-fill-color: rgb(255, 255, 255) !important;
 	} 
 	.mds-signature-img {
-		content:url("https://huntersinclairtiv.github.io/mds/OmniScience-Logo-Email-dark");
+		content:url("https://huntersinclairtiv.github.io/mds/OmniScience-Logo-Email-dark.png");
 	}
 }
 </style>
