--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
 <meta name="supported-color-schemes" content="light dark">
 <style>
 @media (prefers-color-scheme: dark) {
-	.mds-signature-wrap span, .mds-signature-wrap p, .mds-signature-wrap a, 
-	.mds-signature-p, .mds-signature-span, .mds-signature-a {
-		color: rgb(255, 255, 255) !important;
-		-webkit-text-fill-color: rgb(255, 255, 255) !important;
+	.mds-signature-span, {
+		color: #3D7152 !important;
+		-webkit-text-fill-color: #3D7152 !important;
+	}
+	.mds-signature-span-2, {
+		color: #5BB27F !important;
+		-webkit-text-fill-color: #5BB27F !important;
+	}
+	.mds-signature-a {
+		color: #459164 !important;
+		-webkit-text-fill-color: #459164 !important;
 	}
 	.mds-signature-img {
 		content:url("https://huntersinclairtiv.github.io/mds/OmniScience-Logo-Email-dark.png");
@@ -25,11 +32,18 @@
 <meta name="supported-color-schemes" content="light dark">
 <style>
 @media (prefers-color-scheme: dark) {
-	.mds-signature-wrap span, .mds-signature-wrap p, .mds-signature-wrap a, 
-	.mds-signature-p, .mds-signature-span, .mds-signature-a {
-		color: rgb(255, 255, 255) !important;
-		-webkit-text-fill-color: rgb(255, 255, 255) !important;
-	} 
+	.mds-signature-span, {
+		color: #3D7152 !important;
+		-webkit-text-fill-color: #3D7152 !important;
+	}
+	.mds-signature-span-2, {
+		color: #5BB27F !important;
+		-webkit-text-fill-color: #5BB27F !important;
+	}
+	.mds-signature-a {
+		color: #459164 !important;
+		-webkit-text-fill-color: #459164 !important;
+	}
 	.mds-signature-img {
 		content:url("https://huntersinclairtiv.github.io/mds/OmniScience-Logo-Email-dark.png");
 	}
@@ -38,7 +52,7 @@
 
 <span class="mds-signature-span" style='text-decoration: none; color: #387853; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif; line-height: 1.1; font-weight: bold; font: bold 10px/1.5 "SF Pro",Helvetica,Arial,san-serif'>First Last</span><span class="mds-signature-span" style='text-decoration: none; color: #387853; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif; font: normal 10px/1.5 "SF Pro",Helvetica,Arial,san-serif'>, Credentials</span><br/>
 
-<span class="mds-signature-span" style='text-decoration: none; color: #4BA06E; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif; font: normal 10px/1.5 "SF Pro",Helvetica,Arial,san-serif'>Job Title<br/>
+<span class="mds-signature-span-2" style='text-decoration: none; color: #4BA06E; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif; font: normal 10px/1.5 "SF Pro",Helvetica,Arial,san-serif'>Job Title<br/>
 +1 000 000 0000<br/><br/></span>
 
 <a class="mds-signature-a" href="https://maps.app.goo.gl/PgpJVADVVZ7d3YRa6" style='text-decoration: none; color: #668884; font-size: 10px; font-family: "SF Pro", Helvetica, Arial, san-serif; font: normal 10px/1.5 "SF Pro",Helvetica,Arial,san-serif'>Texas Medical Center Innovation</a><br/>
